# yoto-card

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
specs/: 001-initial.md
src/yoto_card/: __init__.py  __main__.py  cli.py  config.py  downloader.py  exceptions.py  metadata.py  utils.py
tests/: conftest.py
tests/integration/: test_full_workflow.py
tests/unit/: test_cli.py  test_downloader.py  test_metadata.py  test_utils.py
